tests/NormalTests/paczka1/fuzzy1/28542652.err
Error in line 1: G8EmCkXzPT A631 16,3
Error in line 16: LBF5F A%31 32,2
Error in line 17: MdTc1Wjfr A460 -1,5
Error in line 13: MdTc1Wjfr A460 8,6
Error in line 28: laAtN2Nw S316 79,0
Error in line 30: MdTc1Wjfr 0316 149,9
Error in line 26: G8EmCkXzPT A460 14,2
Error in line 12: 20empCKzJj A324 43,3
Error in line 11: LBF5F A460 65,0
